add database, migration, logging, routes, signup & signin
