# internal/entity/provider.go
@@ -1,7 +1,0 @@
-package entity
-
-type Provider struct {
-	Name   string
-	URL    string
-	APIKey string
-}
